--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,7 @@
         <a class="page-header__logo">
           <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="190" height="39" alt="Логотип «Кэт энерджи»">
         </a>
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       </div>
       <nav class="page-header__main-nav main-nav">
         <ul class="main-nav__list site-menu">
@@ -47,9 +47,7 @@
                 <img class="card__image card__image--min" src="img/catalog-1-mobile.png" width="68" height="86" alt="Фотография контейнера корма со вкусом курицы 500 грамм">
               </a>
               <div class="wrapper-product">
-                <a class="card__link" href="#">
-                  <h3 class="card__title">Cat Energy PRO 500 г</h3>
-                </a>
+                <h3 class="card__title"><a class="card__link" href="#">Cat Energy PRO 500 г</a></h3>
                 <dl class="card__list">
                   <dt class="card__definition">Масса</dt>
                   <dd class="card__description">500г</dd>
@@ -69,9 +67,7 @@
                 <img class="card__image card__image--max" src="img/catalog-2-mobile.png" width="84" height="100" alt="Фотография контейнера корма со вкусом курицы 100 грамм">
               </a>
               <div class="wrapper-product">
-                <a class="card__link" href="#">
-                  <h3 class="card__title">Cat Energy PRO 1000 г</h3>
-                </a>
+                <h3 class="card__title"><a class="card__link" href="#">Cat Energy PRO 1000 г</a></h3>
                 <dl class="card__list">
                   <dt class="card__definition">Масса</dt>
                   <dd class="card__description">1000 г</dd>
@@ -91,9 +87,7 @@
                 <img class="card__image card__image--min" src="img/catalog-3-mobile.png" width="68" height="78" alt="Фотография контейнера корма со вкусом рыбы 500 грамм">
               </a>
               <div class="wrapper-product">
-                <a class="card__link" href="#">
-                  <h3 class="card__title">Cat Energy PRO 500 г</h3>
-                </a>
+                <h3 class="card__title"><a class="card__link" href="#">Cat Energy PRO 500 г</a></h3>
                 <dl class="card__list">
                   <dt class="card__definition">Масса</dt>
                   <dd class="card__description">500 г</dd>
@@ -113,9 +107,7 @@
                 <img class="card__image card__image--max" src="img/catalog-4-mobile.png" width="84" height="100" alt="Фотография контейнера корма со вкусом рыбы 1000 грамм">
               </a>
               <div class="wrapper-product">
-                <a class="card__link" href="#">
-                  <h3 class="card__title">Cat Energy PRO 1000 г</h3>
-                </a>
+                <h3 class="card__title"><a class="card__link" href="#">Cat Energy PRO 1000 г</a></h3>
                 <dl class="card__list">
                   <dt class="card__definition">Масса</dt>
                   <dd class="card__description">1000 г</dd>
@@ -135,9 +127,7 @@
                 <img class="card__image card__image--min" src="img/catalog-5-mobile.png" width="68" height="78" alt="Фотография контейнера корма со вкусом гречки 500 грамм">
               </a>
               <div class="wrapper-product">
-                <a class="card__link" href="#">
-                  <h3 class="card__title">Cat Energy SLIM 500 г</h3>
-                </a>
+                <h3 class="card__title"><a class="card__link" href="#">Cat Energy SLIM 500 г</a></h3>
                 <dl class="card__list">
                   <dt class="card__definition">Масса</dt>
                   <dd class="card__description">500г</dd>
@@ -157,9 +147,7 @@
                 <img class="card__image card__image--max" src="img/catalog-6-mobile.png" width="84" height="100" alt="Фотография контейнера корма со вкусом гречки 1000 грамм">
               </a>
               <div class="wrapper-product">
-                <a class="card__link" href="#">
-                  <h3 class="card__title">Cat Energy SLIM 1000 г</h3>
-                </a>
+                <h3 class="card__title"><a class="card__link" href="#">Cat Energy SLIM 1000 г</a></h3>
                 <dl class="card__list">
                   <dt class="card__definition">Масса</dt>
                   <dd class="card__description">1000 г</dd>
@@ -179,9 +167,7 @@
                 <img class="card__image card__image--min" src="img/catalog-7-mobile.png" width="72" height="84" alt="Фотография контейнера корма со вкусом риса 500 грамм">
               </a>
               <div class="wrapper-product">
-                <a class="card__link" href="#">
-                  <h3 class="card__title">Cat Energy SLIM 500 г</h3>
-                </a>
+                <h3 class="card__title"><a class="card__link" href="#">Cat Energy SLIM 500 г</a></h3>
                 <dl class="card__list">
                   <dt class="card__definition">Масса</dt>
                   <dd class="card__description">500 г</dd>
@@ -200,14 +186,16 @@
               <b class="all-goods__product">Показать еще 100500 товаров</b>
               <p class="all-goods__text">На самом деле вкусов гораздо больше!</p>
               <a class="all-goods__link button all-goods__button" href="#">показать все</a>
-          </div>
+            </div>
           </div>
         </div>
       </section>
 
 
       <section class="page-main__additional-goods catalog-additional-goods catalog-additional-goods--line">
-        <h2 class="catalog-additional-goods-title container">Дополнительные товары</h2>
+        <div class="catalog-additional-goods__wraper-title">
+          <h2 class="catalog-additional-goods-title container">Дополнительные товары</h2>
+        </div>
         <div class="catalog-additional-goods__catalog-wrapper">
 
           <ul class="catalog-additional-goods__goods-list additional-goods">
